qt: Set the symbol focus to the first visible, tab between syms/insns only

--- a/qt/emilpro/mainwindow.ui
+++ b/qt/emilpro/mainwindow.ui
@@ -59,6 +59,9 @@
              <italic>false</italic>
             </font>
            </property>
+           <property name="focusPolicy">
+            <enum>Qt::ClickFocus</enum>
+           </property>
           </widget>
          </item>
          <item>
