instruction: Add section pointer to resolve referred by

--- a/qt/emilpro/mainwindow.ui
+++ b/qt/emilpro/mainwindow.ui
@@ -291,6 +291,9 @@
                  <property name="focusPolicy">
                   <enum>Qt::ClickFocus</enum>
                  </property>
+                 <property name="editTriggers">
+                  <set>QAbstractItemView::NoEditTriggers</set>
+                 </property>
                  <property name="showGrid">
                   <bool>false</bool>
                  </property>
